# faas

./: AGENTS.md  Makefile  OPTIMIZATION.md  README.md  RESOURCE_OPTIMIZATION.md
.github/workflows/: build-image.yml
benchmark/: auto_tune.py  benchmark_results.json  deploy_with_resources.sh  final_benchmark.py  local_profile.py  profile.py  pyproject.toml  quick_test.py  resource_comparison.py  runner.py  simple_profile.py  test_resource_ratio.py  tune_performance.sh
benchmark/faas_benchmark/: __init__.py  __main__.py  cli.py  config.py  models.py  payload.py  reporter.py  tester.py
docker/: Dockerfile.nsfw
functions/nsfw-detector/: Dockerfile  function-batch.yaml  function-gpu.yaml  function-high-thread.yaml  function-optimized.yaml  function-prebuilt.yaml  function.yaml  main.py  main_batch.py  main_optimized.py
templates/: README.md
templates/python-detector/: function-gpu.yaml  function.yaml  main.py
